# Amifiles

./: .gitignore  CMakeLists.txt  update.sh
.agents/: AGENTS.md
scripts/: bump_version.py  fix_media_artwork.py  generate_test_covers.py
src/: actionhelperdialog.cpp  actionhelperdialog.h  advancednewfolderdialog.cpp  advancednewfolderdialog.h  agestylingdialog.cpp  agestylingdialog.h  archivedialog.cpp  archivedialog.h  archivemodel.cpp  archivemodel.h  autoorganizerdialog.cpp  autoorganizerdialog.h  autotagdialog.cpp  autotagdialog.h  batchimagedialog.cpp  batchimagedialog.h  bulkrename.cpp  bulkrename.h  buttoneditor.cpp  buttoneditor.h  cardviewdelegate.cpp  cardviewdelegate.h  checksumdialog.cpp  checksumdialog.h  cloudmountdialog.cpp  cloudmountdialog.h  columnscustomizerdialog.cpp  columnscustomizerdialog.h  commandpalette.cpp  commandpalette.h  consolepanel.cpp  consolepanel.h  copyqueue.cpp  copyqueue.h  custombuttondialog.h  customfilesystemmodel.cpp  customfilesystemmodel.h  custommenueditordialog.cpp  custommenueditordialog.h  diffdialog.cpp  (+116 more)
